Finaliza a aula sobre passar componentes e faz o assignment

--- a/react-complete-guide/.eslintrc.json
+++ b/react-complete-guide/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "plugins": ["prettier"],
   "rules": {
+    "react/prop-types": "off",
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
     "no-console": "off",
