--- a/react-complete-guide/.eslintrc.json
+++ b/react-complete-guide/.eslintrc.json
@@ -15,7 +15,11 @@
     "class-methods-use-this": "off",
     "node/no-unsupported-features/es-syntax": [
       "error",
-      { "ignores": ["modules"] }
+      {
+        "ignores": ["modules"],
+        "namedComponents": ["function-declaration", "arrow-function"],
+        "unnamedComponents": "arrow-function"
+      }
     ],
     "react/jsx-filename-extension": [0],
     "import/extensions": "off",
