--- a/react-complete-guide/.eslintrc.json
+++ b/react-complete-guide/.eslintrc.json
@@ -13,6 +13,8 @@
     "no-process-exit": "off",
     "object-shorthand": "off",
     "class-methods-use-this": "off",
+    "jsx-a11y/label-has-for": "off",
+    "label-has-associated-control": "off",
     "node/no-unsupported-features/es-syntax": [
       "error",
       { "ignores": ["modules"] }
