--- a/react-complete-guide/package.json
+++ b/react-complete-guide/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-complete-guide",
   "version": "0.1.0",
+  "engines": {
+    "node": ">=12.22.12"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
