--- a/foodOrderApp/.eslintrc.json
+++ b/foodOrderApp/.eslintrc.json
@@ -4,8 +4,8 @@
     "es2021": true
   },
   "extends": [
-    "plugin:react/recommended",
-    "airbnb"
+    "eslint:recommended",
+    "plugin:react/recommended"
   ],
   "overrides": [],
   "parserOptions": {
@@ -16,6 +16,7 @@
     "react"
   ],
   "rules": {
+    "no-unused-vars": "warn",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       1,
