--- a/foodOrderApp/.eslintrc.json
+++ b/foodOrderApp/.eslintrc.json
@@ -18,6 +18,7 @@
   "rules": {
     "no-unused-vars": "warn",
     "react/react-in-jsx-scope": "off",
+    "react/prop-types": 0,
     "react/jsx-filename-extension": [
       1,
       {
